(#6840) Remove need for VERSION file in puppet-dashboard
Instead of always relying on the VERSION file being present, we now
first test to see if it is, then fall back to using the output of
git-describe to determine which version of the Dashboard we are running.

Also, instead of just linking to the puppet-dashboard project on GitHub,
we now link to the CHANGELOG file for the version we are running.

Signed-off-by: Michael Stahnke <stahnma@puppetlabs.com>

--- a/app/views/shared/_global_nav.html.haml
+++ b/app/views/shared/_global_nav.html.haml
@@ -6,7 +6,7 @@
     - else
       %a{:href => root_path, :id => "logo", :style => "text-indent: -9000px;"} Puppet Dashboard
   %li{:class => active_if(request.url == release_notes_url)}
-    = link_to "v#{APP_VERSION}", 'https://github.com/puppetlabs/puppet-dashboard'
+    = link_to APP_VERSION, "https://github.com/puppetlabs/puppet-dashboard/blob/#{APP_VERSION.sub(/.*?g([0-9a-f]*)/, "\\1")}/CHANGELOG"
   %li &raquo;
   %li{:class => active_if(request.url == root_url)}
     = link_to "Home", root_path
